<resources>
    <string name="app_name">Mymou</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="max_reward_channels">4</string>
    <string name="allChanOff">0</string>
    <string name="chanZeroOn">1</string>
    <string name="chanZeroOff">2</string>
    <string name="chanOneOn">3</string>
    <string name="chanOneOff">4</string>
    <string name="chanTwoOn">5</string>
    <string name="chanTwoOff">6</string>
    <string name="chanThreeOn">7</string>
    <string name="chanThreeOff">8</string>
    <string name="task_mode">task_mode</string>
    <string-array name="available_tasks">
        <item>Training 1: Full screen cue</item>
        <item>Training 2: Shrinking central cue</item>
        <item>Training 3: Shrinking moving cue</item>
        <item>Training 4: Small Moving cue</item>
        <item>Training 5: Two step</item>
        <item>Example task</item>
        <item>Discrete Maze</item>
        <item>Object discrimination (colours)</item>
        <item>Object discrimination (images)</item>
        <item>Progressive Ratio</item>
        <item>Evidence Accumulation</item>
        <item>Spatial response</item>
        <item>Sequential Learning</item>
        <item>Random dot motion</item>
        <item>Discrete value space</item>
    </string-array>
    <string-array name="task_descriptions">
        <item>Displays a cue that takes up the entire screen. Subjects can then press anywhere on the screen to trigger reward.</item>
        <item>Displays a cue that initially takes up the entire screen. On each press the cue gets smaller and smaller to encourage accurate screen presses. The size of the cue resets to the full screen size if no touches are received for a short period. </item>
        <item>Displays a cue that initially takes up the entire screen. On each press the cue shrinks in size and moves around the screen. The size of the cue resets to the full screen size if no touches are received for a short period. </item>
        <item>Displays 1 normal sized cue that randomly moves around the screen on each press. </item>
        <item>Implementation of the reduced two step task described in Akam et al. (2017).</item>
        <item>This task showcases the full features of the Mymou system, including facial recognition, and multiple reward channels. </item>
        <item>Associative learning of large networks of stimuli, as seen in Butler and Kennerley (2018). Subjects are shown a target stimuli at the top of the screen. Their current location and neighbouring stimuli are displayed in the lower part of the screen. Subjects then have to learn to navigate to the different locations in the maze.</item>
        <item>Subjects are shown multiple CS- and CS+ stimuli which they must learn to differentiate. Stimuli are limited to single colours </item>
        <item>Subjects are shown multiple CS- and CS+ stimuli which they must learn to differentiate. Stimuli are photos of images taken from the database kindly provided in Brady et al. (2008) PNAS </item>
        <item>One stimuli is displayed on the screen. After each press, the subjects must then have to press twice as many times to gain reward. After a certain period the number of presses needed for reward resets to 1. </item>
        <item>Two bars are displayed with varying length for a certain number of frames. Subjects must then choose which bar had the greatest total length over all the frames. </item>
        <item>Different spatial locations are shown sequentially. Subjects must then repeat the sequence in order for reward. </item>
        <item>A sequence of images in shown, each image must be pressed to progress to the next image. On the second lap of the sequence, at a random point a choice will be given between the next valid image in the sequence vs one of the other images from the sequence</item>
        <item>A movie is played consisting of dots moving in different directions, for which a specified proportion of dots all move towards either the left or right of the screen. Subjects must then select which side of the screen the dots were moving towards.</item>
        <item>Subjects are given choices between two cues that lie on a 10x10 value grid made up of probability and magnitude dimensions. For example, the cue at (1, 1) will give 10% reward 10% of the time. They can then pick either cue are given the corresponding reward along with a secondary reinforcer to indicate whether it was better or worse than the counterfactual option.</item>
    </string-array>
    <string name="default_startuptime">0700</string>
    <string name="default_shutdowntime">1900</string>
    <string name="default_eventcode_correct_trial">1</string>
    <string name="default_eventcode_error_trial">0</string>
    <string name="default_eventcode_timeout_trial">2</string>
    <string name="default_eventcode_wrong_gocue">3</string>
    <string name="default_eventcode_start_trial">5</string>
    <string name="default_eventcode_trial_prepared">6</string>
    <string name="default_gocue_colours">0,0,1,1,0,0,0,0,0,0,0,0,0,0,0,0,</string>
    <string name="default_objdis_corr_colours">0,0,0,0,1,1,1,1,0,0,0,0,0,0,0,0,</string>
    <string name="default_objdis_incorr_colours">0,0,0,0,0,0,0,0,1,1,1,1,0,0,0,0,</string>
    <string name="preftag_debug">debug</string>
    <string name="preftag_bluetooth">bluetooth</string>
    <string name="preftag_camera">camera</string>
    <string name="preftag_crop_photos">crop_photos</string>
    <string name="preftag_crop_picker">preftag_crop_picker</string>
    <string name="preftag_cam_picker">preftag_cam_picker</string>
    <string name="preftag_camera_resolution_front">camera_resolution_front</string>
    <string name="preftag_camera_resolution_rear">camera_resolution_rear</string>
    <string name="preftag_camera_resolution_ext">camera_resolution_ext</string>
    <string name="preftag_camera_resolution_ext_height">camera_resolution_ext_y</string>
    <string name="preftag_camera_resolution_ext_width">camera_resolution_ext_x</string>
    <string name="preftag_facerecog">facerecog</string>
    <string name="preftag_savefacerecogarrays">savefacerecogarrays</string>
    <string name="preftag_dimscreen">preftag_dimscreen</string>
    <string name="preftag_dimscreenlevel">preftag_dimscreenlevel</string>
    <string name="preftag_dimscreentime">preftag_dimscreentime</string>
    <string name="preftag_restartoncrash">restartoncrash</string>
    <string name="preftag_sound">sound</string>
    <string name="preftag_autostart">autostart</string>
    <string name="preftag_autostarttimepicker">autostarttimepicker</string>
    <string name="preftag_autostop">autostop</string>
    <string name="preftag_autostoptimepicker">autostoptimepicker</string>
    <string name="preftag_skip_go_cue">skip_go_cue</string>
    <string name="preftag_gocuecolors">colours_gocues</string>
    <string name="preftag_cuebordercolors">colours_cueborders</string>
    <string name="preftag_task_all">preftag_task_all</string>
    <string name="preftag_camera_prefs">preftag_camera_prefs</string>
    <string name="preftag_reward_prefs">preftag_reward_prefs</string>
    <string name="preftag_cue_settings">preftag_cue_settings</string>
    <string name="preftag_event_codes">preftag_event_codes</string>
    <string name="preftag_system_settings">preftag_system_settings</string>
    <string name="preftag_menu_prefs">preftag_menu_prefs</string>
    <string name="preftag_rewardduration">preftag_rewardduration</string>
    <string name="preftag_timeoutduration">preftag_timeoutduration</string>
    <string name="preftag_responseduration">preftag_responseduration</string>
    <string name="preftag_num_monkeys">preftag_num_monkeys</string>
    <string name="preftag_eventcode_correct_trial">eventcode_correct_trial</string>
    <string name="preftag_eventcode_error_trial">eventcode_error_trial</string>
    <string name="preftag_eventcode_timeout_trial">eventcode_timeout_trial</string>
    <string name="preftag_eventcode_wrong_gocue">eventcode_wrong_gocue</string>
    <string name="preftag_eventcode_start_trial">eventcode_start_trial</string>
    <string name="preftag_eventcode_trial_prepared">eventcode_trial_prepared</string>
    <string name="preftag_strobe_one_on">preftag_strobe_one_on</string>
    <string name="preftag_strobe_one_off">preftag_strobe_one_off</string>
    <string name="preftag_strobe_two_on">preftag_strobe_two_on</string>
    <string name="preftag_strobe_two_off">preftag_strobe_two_off</string>
    <string name="preftag_strobe_three_on">preftag_strobe_three_on</string>
    <string name="preftag_strobe_three_off">preftag_strobe_three_off</string>
    <string name="preftag_strobe_four_on">preftag_strobe_four_on</string>
    <string name="preftag_strobe_four_off">preftag_strobe_four_off</string>
    <string name="default_strobe_one_on">1</string>
    <string name="default_strobe_one_off">2</string>
    <string name="default_strobe_two_on">3</string>
    <string name="default_strobe_two_off">4</string>
    <string name="default_strobe_three_on">5</string>
    <string name="default_strobe_three_off">6</string>
    <string name="default_strobe_four_on">7</string>
    <string name="default_strobe_four_off">8</string>
    <string name="preftag_taskbackgroundcolour">taskbackgroundcolour</string>
    <string name="preftag_rewardbackgroundcolour">rewardbackgroundcolour</string>
    <string name="preftag_timeoutbackgroundcolour">timeoutbackgroundcolour</string>
    <string name="preftag_cue_size">cue_size</string>
    <string name="preftag_cue_spacing">cue_spacing</string>
    <string name="preftag_cue_border_size">cue_border_size</string>
    <string name="preftag_autostart_hour">autostart_hour</string>
    <string name="preftag_autostart_min">autostart_min</string>
    <string name="preftag_autostop_hour">autostop_hour</string>
    <string name="preftag_autostop_min">autostop_min</string>
    <string name="preftag_task_odc_settings">preftag_task_odc_settings</string>
    <string name="preftag_task_disc_maze_settings">preftag_task_disc_maze_settings</string>
    <string name="preftag_task_t_one_settings">preftag_task_t_one_settings</string>
    <string name="preftag_task_pr_settings">preftag_task_pr_settings</string>
    <string name="preftag_task_ea_settings">preftag_task_ea_settings</string>
    <string name="preftag_task_sr_settings">preftag_task_sr_settings</string>
    <string name="preftag_task_sl_settings">preftag_task_sl_settings</string>
    <string name="preftag_task_rdm_settings">preftag_task_rdm_settings</string>
    <string name="preftag_task_dvs_settings">preftag_task_dvs_settings</string>
    <string name="preftag_task_od_settings">preftag_task_od_settings</string>
    <string name="preftag_bluetooth_strobes">preftag_bluetooth_strobes</string>
    <string name="preftag_settings_to_load">preftag_settings_to_load</string>
    <string name="preftag_sound_to_play">preftag_sound_to_play</string>
    <string name="start_task">START TASK</string>
    <string name="reward_system_controller">Reward system controller</string>
    <string name="channel">Channel:</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="activate">Activate:</string>
    <string name="off">OFF</string>
    <string name="on">ON</string>
    <string name="bluetooth_status">Bluetooth Status:</string>
    <string name="not_connected">Not Connected</string>
    <string name="connect">Connect</string>
    <string name="settings">Settings</string>
    <string name="task">Task:</string>
    <string name="system_settings">System Settings</string>
    <string name="task_settings">Task Settings</string>
    <string name="behavioural_data_in_development">Behavioural Data (In Development)</string>
    <string name="view_performance">View Performance</string>
</resources>