<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/mainLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">


    <TextView
            android:id="@+id/tv_rew_system_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:layout_marginVertical="30dp"
            android:background="@drawable/menu_background_title"
            android:paddingStart="20dp"
            android:text="@string/reward_system_controller"
            android:textColor="@color/textColor"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlSymmetry" />

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/rew_system_controller_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/menu_background_body"
            android:baselineAligned="false"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_rew_system_title">


        <TextView
                android:id="@+id/tv_rew_system_chan_lab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="140dp"
                android:layout_marginTop="10dp"
                android:paddingStart="5dp"
                android:paddingTop="5dp"
                android:paddingEnd="5dp"
                android:paddingBottom="5dp"
                android:text="@string/channel"
                android:textColor="@color/textColor"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
                android:id="@+id/rg_rewchanpicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="@+id/tv_rew_system_chan_lab"
                app:layout_constraintStart_toEndOf="@+id/tv_rew_system_chan_lab">

            <RadioButton
                    android:id="@+id/rb_chan0"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:paddingStart="5dp"
                    android:paddingTop="5dp"
                    android:paddingEnd="5dp"
                    android:paddingBottom="5dp"
                    android:text="@string/_0"
                    android:textSize="30sp" />

            <RadioButton
                    android:id="@+id/rb_chan1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:paddingStart="5dp"
                    android:paddingTop="5dp"
                    android:paddingEnd="5dp"
                    android:paddingBottom="5dp"
                    android:text="@string/_1"
                    android:textSize="30sp" />

            <RadioButton
                    android:id="@+id/rb_chan2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:paddingStart="5dp"
                    android:paddingTop="5dp"
                    android:paddingEnd="5dp"
                    android:paddingBottom="5dp"
                    android:text="@string/_2"
                    android:textSize="30sp" />

            <RadioButton
                    android:id="@+id/rb_chan3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:paddingStart="5dp"
                    android:paddingTop="5dp"
                    android:paddingEnd="5dp"
                    android:paddingBottom="5dp"
                    android:text="@string/_3"
                    android:textSize="30sp" />
        </RadioGroup>

        <TextView
                android:id="@+id/tv_rew_system_switch_lab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:paddingTop="5dp"
                android:paddingEnd="5dp"
                android:paddingBottom="5dp"
                android:text="@string/activate"
                android:textColor="@color/textColor"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="@+id/tv_rew_system_chan_lab"
                app:layout_constraintTop_toBottomOf="@+id/tv_rew_system_chan_lab" />

        <RadioGroup
                android:id="@+id/rg_rewonoff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="@+id/tv_rew_system_switch_lab"
                app:layout_constraintStart_toStartOf="@+id/rg_rewchanpicker">

            <RadioButton
                    android:id="@+id/rb_pumpoff"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:paddingStart="5dp"
                    android:paddingTop="5dp"
                    android:paddingEnd="5dp"
                    android:paddingBottom="5dp"
                    android:scaleX="1"
                    android:scaleY="1"
                    android:text="@string/off"
                    android:textSize="30sp" />

            <RadioButton
                    android:id="@+id/rb_pumpon"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:paddingStart="5dp"
                    android:paddingTop="5dp"
                    android:paddingEnd="5dp"
                    android:paddingBottom="5dp"
                    android:text="@string/on"
                    android:textSize="30sp" />

        </RadioGroup>


        <TextView
                android:id="@+id/tv_rew_system_btstatus_lab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:paddingTop="5dp"
                android:paddingEnd="5dp"
                android:paddingBottom="5dp"
                android:text="@string/bluetooth_status"
                android:textColor="@color/textColor"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="@+id/tv_rew_system_chan_lab"
                app:layout_constraintTop_toBottomOf="@+id/tv_rew_system_switch_lab" />

        <TextView
                android:id="@+id/tvBluetooth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:paddingTop="5dp"
                android:paddingEnd="5dp"
                android:paddingBottom="5dp"
                android:text="@string/not_connected"
                android:textColor="@color/textColor"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_rew_system_btstatus_lab"
                app:layout_constraintStart_toStartOf="@+id/rg_rewchanpicker" />

        <Button
                android:id="@+id/buttConnectToBt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="3dp"
                android:background="@drawable/menu_button"
                android:paddingHorizontal="30dp"
                android:paddingVertical="10dp"
                android:text="@string/connect"
                android:textColor="@color/textColor"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvBluetooth" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
            android:id="@+id/tv_settings_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:layout_marginVertical="60dp"
            android:background="@drawable/menu_background_title"
            android:paddingStart="20dp"
            android:text="@string/settings"
            android:textColor="@color/textColor"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rew_system_controller_layout"
            tools:ignore="RtlSymmetry" />


    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_body_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/menu_background_body"
            android:baselineAligned="false"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_settings_title">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/loadTask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="0dp"
                android:layout_marginVertical="0dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            <TextView
                    android:id="@+id/tvTask"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="20dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:paddingStart="5dp"
                    android:paddingTop="5dp"
                    android:paddingEnd="5dp"
                    android:paddingBottom="5dp"
                    android:text="@string/task"
                    android:textColor="#FFFFFF"
                    android:textSize="30sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                    android:id="@+id/spinnerTaskMenu"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="100dp"
                    android:layout_marginBottom="8dp"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tvTask"
                    app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                    android:id="@+id/info_button"
                    android:layout_width="63dp"
                    android:layout_height="65dp"
                    android:layout_margin="0dp"
                    android:layout_marginStart="8dp"
                    android:background="@null"
                    android:paddingTop="10dp"
                    android:scaleType="centerInside"
                    android:scaleX="1"
                    android:scaleY="1"
                    android:src="@drawable/i_button"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/spinnerTaskMenu"
                    app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <Button
                android:id="@+id/buttonSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/menu_button"
                android:paddingHorizontal="30dp"
                android:paddingVertical="10dp"
                android:text="@string/system_settings"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toStartOf="@+id/buttonTaskSettings"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loadTask" />

        <Button
                android:id="@+id/buttonTaskSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/menu_button"
                android:paddingHorizontal="30dp"
                android:paddingVertical="10dp"
                android:text="@string/task_settings"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/buttonSettings"
                app:layout_constraintTop_toBottomOf="@+id/loadTask" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
            android:id="@+id/tv_data_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:layout_marginVertical="60dp"
            android:background="@drawable/menu_background_title"
            android:paddingStart="20dp"
            android:text="@string/behavioural_data_in_development"
            android:textColor="@color/textColor"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_body_settings"
            tools:ignore="RtlSymmetry" />

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_body_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/menu_background_body"
            android:baselineAligned="false"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_data_title">

        <Button
                android:id="@+id/buttonViewData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:background="@drawable/menu_button"
                android:paddingHorizontal="30dp"
                android:paddingVertical="10dp"
                android:text="@string/view_performance"
                android:textColor="@color/grey"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
            android:id="@+id/buttonStart"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/menu_button"
            android:paddingHorizontal="70dp"
            android:paddingVertical="30dp"
            android:text="@string/start_task"
            android:textColor="@color/white"
            android:textSize="50sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cl_body_data" />

</androidx.constraintlayout.widget.ConstraintLayout>

